CrOS shelf: update separator as needed

This fixes a bug whereby when pinning or un-pinning an app in a way
that didn't require a reorder (e.g. pinning the leftmost running app)
did not cause the separator to appear.

Bug: 877348
Change-Id: I2f509a32f69f4779806430b4c08a96268171edef
Reviewed-on: https://chromium-review.googlesource.com/1187962
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585882}
Former-commit-id: 06a752dd735667eb42d301a48b64504247a1dbc8